arah kiblat empty layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     compileSdk 33
-
+    buildFeatures { viewBinding true }
     defaultConfig {
         applicationId "Site.elahady.alkaukaba"
         minSdk 21
