--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,20 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    // Import the Kotlin BOM
+    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.10')
+
+    // You can likely remove version numbers from other kotlin dependencies now
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    // Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Coroutines (Asynchronous)
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+
+    // Lifecycle Scope (untuk launch coroutine di Activity)
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 }
