add permission GPS qibla

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
         </activity>
         <activity
-            android:name=".arahkiblat.ArahKiblatActivity"
+            android:name=".arahkiblat.KiblatActivity"
             android:exported="false">
 
         </activity>
