--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
-
+        <activity
+            android:name="Site.elahady.alkaukaba.ui.calendar.CalendarActivity"
+            android:exported="false" />
+        <activity
+            android:name="Site.elahady.alkaukaba.ui.waktusholat.WaktuSholatActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -29,13 +34,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name=".arahkiblat.ArahKiblatActivity"
-            android:exported="false">
-
-        </activity>
+            android:name="Site.elahady.alkaukaba.ui.arahkiblat.ArahKiblatActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
