done get angle qibla

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity
             android:name="Site.elahady.alkaukaba.ui.waktusholat.WaktuSholatActivity"
             android:exported="false" />
+        <activity android:name=".ui.arahkiblat.KiblatActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -35,9 +37,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="Site.elahady.alkaukaba.ui.arahkiblat.ArahKiblatActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
