--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,14 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".DetailPerhitunganActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
-        <activity android:name=".ui.arahkiblat.KiblatActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".ui.arahkiblat.KiblatActivity"
+            android:exported="false" />
         <activity
             android:name=".Splashscreen"
             android:exported="true">
@@ -41,11 +45,8 @@
             android:name="Site.elahady.alkaukaba.ui.calendar.CalendarActivity"
             android:exported="false" />
         <activity
-            android:name="Site.elahady.alkaukaba.ui.waktusholat.WaktuSholatActivity"
-            android:exported="false" >
-
-
-        </activity>
+            android:name=".ui.waktusholat.WaktuSholatActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
