--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation("com.github.bumptech.glide:glide:4.16.0")
@@ -65,4 +65,5 @@ dependencies {
     // Lifecycle Scope (untuk launch coroutine di Activity)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
 }
